Bug 1446342: Don't include forms in the scope chain for XBL datetime bindings. r=smaug

Reviewers: smaug

Bug #: 1446342

Differential Revision: https://phabricator.services.mozilla.com/D769

MozReview-Commit-ID: HK7nChYf0X6