dom/xbl/nsXBLProtoImplField.cpp
@@ -208,7 +208,7 @@ InstallXBLField(JSContext* cx,
   nsXBLProtoImplField* field = protoBinding->FindField(fieldName);
   MOZ_ASSERT(field);
 
-  nsresult rv = field->InstallField(thisObj, protoBinding->DocURI(), installed);
+  nsresult rv = field->InstallField(thisObj, *protoBinding, installed);
   if (NS_SUCCEEDED(rv)) {
     return true;
   }
@@ -373,7 +373,7 @@ nsXBLProtoImplField::InstallAccessors(JSContext* aCx,
 
 nsresult
 nsXBLProtoImplField::InstallField(JS::Handle<JSObject*> aBoundNode,
-                                  nsIURI* aBindingDocURI,
+                                  const nsXBLPrototypeBinding& aProtoBinding,
                                   bool* aDidInstall) const
 {
   NS_PRECONDITION(aBoundNode,
@@ -390,7 +390,7 @@ nsXBLProtoImplField::InstallField(JS::Handle<JSObject*> aBoundNode,
   nsAutoMicroTask mt;
 
   nsAutoCString uriSpec;
-  nsresult rv = aBindingDocURI->GetSpec(uriSpec);
+  nsresult rv = aProtoBinding.DocURI()->GetSpec(uriSpec);
   if (NS_WARN_IF(NS_FAILED(rv))) {
     return rv;
   }
@@ -436,7 +436,7 @@ nsXBLProtoImplField::InstallField(JS::Handle<JSObject*> aBoundNode,
   options.setFileAndLine(uriSpec.get(), mLineNumber)
          .setVersion(JSVERSION_LATEST);
   JS::AutoObjectVector scopeChain(cx);
-  if (!nsJSUtils::GetScopeChainForElement(cx, boundElement, scopeChain)) {
+  if (!nsJSUtils::GetScopeChainForXBL(cx, boundElement, aProtoBinding, scopeChain)) {
     return NS_ERROR_OUT_OF_MEMORY;
   }
   rv = NS_OK;
