dom/xbl/nsXBLProtoImplField.h
@@ -33,7 +33,7 @@ public:
   void SetNext(nsXBLProtoImplField* aNext) { mNext = aNext; }
 
   nsresult InstallField(JS::Handle<JSObject*> aBoundNode,
-                        nsIURI* aBindingDocURI,
+                        const nsXBLPrototypeBinding& aProtoBinding,
                         bool* aDidInstall) const;
 
   nsresult InstallAccessors(JSContext* aCx,
