dom/xbl/nsXBLPrototypeBinding.cpp
@@ -104,6 +104,7 @@ nsXBLPrototypeBinding::nsXBLPrototypeBinding()
   mKeyHandlersRegistered(false),
   mChromeOnlyContent(false),
   mBindToUntrustedContent(false),
+  mSimpleScopeChain(false),
   mResources(nullptr),
   mBaseNameSpaceID(kNameSpaceID_None)
 {
@@ -221,6 +222,11 @@ nsXBLPrototypeBinding::SetBindingElement(nsIContent* aElement)
   mBindToUntrustedContent = mBinding->AttrValueIs(kNameSpaceID_None,
                                                   nsGkAtoms::bindToUntrustedContent,
                                                   nsGkAtoms::_true, eCaseMatters);
+
+  // TODO(emilio): Should we imply mBindToUntrustedContent -> mSimpleScopeChain?
+  mSimpleScopeChain = mBinding->AttrValueIs(kNameSpaceID_None,
+                                            nsGkAtoms::simpleScopeChain,
+                                            nsGkAtoms::_true, eCaseMatters);
 }
 
 bool
@@ -263,7 +269,7 @@ nsXBLPrototypeBinding::BindingAttached(nsIContent* aBoundElement)
 {
   if (mImplementation && mImplementation->CompiledMembers() &&
       mImplementation->mConstructor)
-    return mImplementation->mConstructor->Execute(aBoundElement, MapURIToAddonID(mBindingURI));
+    return mImplementation->mConstructor->Execute(aBoundElement, *this, MapURIToAddonID(mBindingURI));
   return NS_OK;
 }
 
@@ -272,7 +278,7 @@ nsXBLPrototypeBinding::BindingDetached(nsIContent* aBoundElement)
 {
   if (mImplementation && mImplementation->CompiledMembers() &&
       mImplementation->mDestructor)
-    return mImplementation->mDestructor->Execute(aBoundElement, MapURIToAddonID(mBindingURI));
+    return mImplementation->mDestructor->Execute(aBoundElement, *this, MapURIToAddonID(mBindingURI));
   return NS_OK;
 }
 
@@ -826,6 +832,8 @@ nsXBLPrototypeBinding::Read(nsIObjectInputStream* aStream,
     (aFlags & XBLBinding_Serialize_ChromeOnlyContent) ? true : false;
   mBindToUntrustedContent =
     (aFlags & XBLBinding_Serialize_BindToUntrustedContent) ? true : false;
+  mSimpleScopeChain =
+    (aFlags & XBLBinding_Serialize_SimpleScopeChain) ? true : false;
 
   // nsXBLContentSink::ConstructBinding doesn't create a binding with an empty
   // id, so we don't here either.
@@ -1047,6 +1055,10 @@ nsXBLPrototypeBinding::Write(nsIObjectOutputStream* aStream)
 
   if (mBindToUntrustedContent) {
     flags |= XBLBinding_Serialize_BindToUntrustedContent;
+  }
+
+  if (mSimpleScopeChain) {
+    flags |= XBLBinding_Serialize_SimpleScopeChain;
   }
 
   nsresult rv = aStream->Write8(flags);
