dom/xbl/nsXBLPrototypeBinding.h
@@ -261,8 +261,9 @@ public:
                              nsIContent* aCopyRoot,
                              nsIContent* aTemplChild);
 
-  bool ChromeOnlyContent() { return mChromeOnlyContent; }
-  bool BindToUntrustedContent() { return mBindToUntrustedContent; }
+  bool ChromeOnlyContent() const { return mChromeOnlyContent; }
+  bool SimpleScopeChain() const { return mSimpleScopeChain; }
+  bool BindToUntrustedContent() const { return mBindToUntrustedContent; }
 
   typedef nsClassHashtable<nsISupportsHashKey, nsXBLAttributeEntry> InnerAttributeTable;
 
@@ -299,6 +300,9 @@ protected:
   bool mKeyHandlersRegistered;
   bool mChromeOnlyContent;
   bool mBindToUntrustedContent;
+  // True if constructors, handlers, etc for this binding would skip the scope
+  // chain for parent elements and go directly to the document.
+  bool mSimpleScopeChain;
 
   nsAutoPtr<nsXBLPrototypeResources> mResources; // If we have any resources, this will be non-null.
 
